[gd_scene load_steps=8 format=3 uid="uid://n8lnftxt3gyf"]

[ext_resource type="Theme" uid="uid://byhrlwtow3f1m" path="res://Assets/Themes/main_menu.tres" id="1_f4y0c"]
[ext_resource type="Script" uid="uid://dqiehh3u0dx2a" path="res://Scripts/game_menu.gd" id="2_f4y0c"]
[ext_resource type="Texture2D" uid="uid://dqyp1t1bdoygf" path="res://Assets/Themes/Main_Menu_Button02.png" id="3_nte6v"]
[ext_resource type="AudioStream" uid="uid://cvr4xitf2h0wx" path="res://Assets/Sounds/Menu_Score.wav" id="4_v8231"]
[ext_resource type="AudioStream" uid="uid://dwrp3n1lrknrp" path="res://Assets/Sounds/Menu_Button_Click.mp3" id="5_actnc"]

[sub_resource type="Shader" id="Shader_v8231"]
code = "shader_type canvas_item;


uniform float offset: hint_range(0.0, 10.0);
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;


void fragment() {
	vec2 uv = UV;
	vec2 halfpixel = SCREEN_PIXEL_SIZE / 2.0;
	
	vec4 sum = texture(SCREEN_TEXTURE, uv + vec2(-halfpixel.x * 2.0, 0.0) * offset);
	sum += texture(SCREEN_TEXTURE, uv + vec2(-halfpixel.x, halfpixel.y) * offset) * 2.0;
	sum += texture(SCREEN_TEXTURE, uv + vec2(0.0, halfpixel.y * 2.0) * offset);
	sum += texture(SCREEN_TEXTURE, uv + vec2(halfpixel.x, halfpixel.y) * offset) * 2.0;
	sum += texture(SCREEN_TEXTURE, uv + vec2(halfpixel.x * 2.0, 0.0) * offset);
	sum += texture(SCREEN_TEXTURE, uv + vec2(halfpixel.x, -halfpixel.y) * offset) * 2.0;
	sum += texture(SCREEN_TEXTURE, uv + vec2(0.0, -halfpixel.y * 2.0) * offset);
	sum += texture(SCREEN_TEXTURE, uv + vec2(-halfpixel.x, -halfpixel.y) * offset) * 2.0;

	COLOR = sum / 12.0;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n52ti"]
shader = SubResource("Shader_v8231")
shader_parameter/offset = 0.0

[node name="GameMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f4y0c")
script = ExtResource("2_f4y0c")
tween_intensity = 1.2
tween_duration = 0.3

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_n52ti")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.4862745, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = 240.0
offset_right = 500.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.45)
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ReturnToGame" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../GridContainer/MusicSlider")
focus_next = NodePath("../GridContainer/MusicSlider")
focus_previous = NodePath("../Quit")
text = "Resume"
icon = ExtResource("3_nte6v")
flat = true
icon_alignment = 1

[node name="GridContainer" type="VBoxContainer" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 19

[node name="MusicLabel" type="Label" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../ReturnToGame")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../../ReturnToGame")
value = 100.0

[node name="SFXLabel" type="Label" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../MusicSlider")
theme_override_font_sizes/font_size = 30
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/ButtonsVBox/GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../../MainMenu")
focus_next = NodePath("../../MainMenu")
focus_previous = NodePath("../MusicSlider")
value = 100.0

[node name="MainMenu" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../GridContainer/SFXSlider")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../GridContainer/SFXSlider")
text = "Return to Menu"
icon = ExtResource("3_nte6v")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="MarginContainer/ButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../ReturnToGame")
focus_next = NodePath("../ReturnToGame")
focus_previous = NodePath("../MainMenu")
text = "Quit Game"
icon = ExtResource("3_nte6v")
flat = true
icon_alignment = 1

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_v8231")
bus = &"Music"

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_actnc")
bus = &"SFX"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/ReturnToGame" to="." method="_on_return_to_game_pressed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/ButtonsVBox/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonsVBox/Quit" to="." method="_on_quit_pressed"]
